--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+url_reference = https://twinword-word-graph-dictionary.p.rapidapi.com/reference/?entry=
+url_association =https://twinword-word-graph-dictionary.p.rapidapi.com/association/?entry=
+url_definition =https://twinword-word-graph-dictionary.p.rapidapi.com/definition/?entry=
+url_example =https://twinword-word-graph-dictionary.p.rapidapi.com/example/?entry=
+url_theme =https://twinword-word-graph-dictionary.p.rapidapi.com/theme/?entry=
 
+access_twinword_host = twinword-word-graph-dictionary.p.rapidapi.com
+access_twinword_key = b2330e2194mshdfdfb1ae1518ce5p164255jsn2e8b404ce6e6
+
+url_lingua_roboot = https://lingua-robot.p.rapidapi.com/language/v1/entries/en/
+access_lingua-robot_host = lingua-robot.p.rapidapi.com
+access_lingua-robot_key = b2330e2194mshdfdfb1ae1518ce5p164255jsn2e8b404ce6e6
