removendo a key valida

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ url_example =https://twinword-word-graph-dictionary.p.rapidapi.com/example/?entr
 url_theme =https://twinword-word-graph-dictionary.p.rapidapi.com/theme/?entry=
 
 access_twinword_host = twinword-word-graph-dictionary.p.rapidapi.com
-access_twinword_key = b2330e2194mshdfdfb1ae1518ce5p164255jsn2e8b404ce6e6
+access_twinword_key = 
 
 url_lingua_roboot = https://lingua-robot.p.rapidapi.com/language/v1/entries/en/
 access_lingua-robot_host = lingua-robot.p.rapidapi.com
-access_lingua-robot_key = b2330e2194mshdfdfb1ae1518ce5p164255jsn2e8b404ce6e6
+access_lingua-robot_key = 
