--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ access_twinword_host = twinword-word-graph-dictionary.p.rapidapi.com
 access_twinword_key = 
 
 url_lingua_roboot = https://lingua-robot.p.rapidapi.com/language/v1/entries/en/
-access_lingua-robot_host = lingua-robot.p.rapidapi.com
-access_lingua-robot_key = 
+access_lingua_robot_host = lingua-robot.p.rapidapi.com
+access_lingua_robot_key = 
